k8s/server-cluster-ip-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-services
spec:
  type: ClusterIP
  selector:
     component: server
  ports:
     - port: 5000
       targetPort: 5000
